// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modules/datasource/aws-machine-image/index > getSortedAwsMachineImages() > with 1 returned image 1`] = `
[
  DescribeImagesCommand {
    "deserialize": [Function],
    "input": {
      "Filters": [
        {
          "Name": "owner-id",
          "Values": [
            "602401143452",
          ],
        },
        {
          "Name": "name",
          "Values": [
            "1image",
          ],
        },
      ],
    },
    "middlewareStack": {
      "add": [Function],
      "addRelativeTo": [Function],
      "applyToStack": [Function],
      "clone": [Function],
      "concat": [Function],
      "identify": [Function],
      "identifyOnResolve": [Function],
      "remove": [Function],
      "removeByTag": [Function],
      "resolve": [Function],
      "use": [Function],
    },
    "serialize": [Function],
  },
]
`;

exports[`modules/datasource/aws-machine-image/index > getSortedAwsMachineImages() > with 3 returned images 1`] = `
[
  DescribeImagesCommand {
    "deserialize": [Function],
    "input": {
      "Filters": [
        {
          "Name": "owner-id",
          "Values": [
            "602401143452",
          ],
        },
        {
          "Name": "name",
          "Values": [
            "3images",
          ],
        },
      ],
    },
    "middlewareStack": {
      "add": [Function],
      "addRelativeTo": [Function],
      "applyToStack": [Function],
      "clone": [Function],
      "concat": [Function],
      "identify": [Function],
      "identifyOnResolve": [Function],
      "remove": [Function],
      "removeByTag": [Function],
      "resolve": [Function],
      "use": [Function],
    },
    "serialize": [Function],
  },
]
`;

exports[`modules/datasource/aws-machine-image/index > getSortedAwsMachineImages() > without returned images 1`] = `
[
  DescribeImagesCommand {
    "deserialize": [Function],
    "input": {
      "Filters": [
        {
          "Name": "owner-id",
          "Values": [
            "602401143452",
          ],
        },
        {
          "Name": "name",
          "Values": [
            "noiamge",
          ],
        },
      ],
    },
    "middlewareStack": {
      "add": [Function],
      "addRelativeTo": [Function],
      "applyToStack": [Function],
      "clone": [Function],
      "concat": [Function],
      "identify": [Function],
      "identifyOnResolve": [Function],
      "remove": [Function],
      "removeByTag": [Function],
      "resolve": [Function],
      "use": [Function],
    },
    "serialize": [Function],
  },
]
`;
